the_project/base/todo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 2345
